objects/Venue__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Venue_Address__c</fullName>
        <label>Venue Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <label>Venue Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Venue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Venue_Data</fullName>
        <columns>Venue_Name__c</columns>
        <columns>Venue_Address__c</columns>
        <columns>Contact_Number__c</columns>
        <columns>Capacity__c</columns>
        <filterScope>Everything</filterScope>
        <label>Venue Data</label>
    </listViews>
    <listViews>
        <fullName>Venue_View</fullName>
        <columns>NAME</columns>
        <columns>Venue_Name__c</columns>
        <columns>Capacity__c</columns>
        <columns>Venue_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>Venue View</label>
    </listViews>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Venue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>